# Novestia

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  mypy.ini  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_enable_timescaledb.py  003_add_idempotency_keys.py
backend/src/novestia/: config.py  main.py
backend/src/novestia/api/: health.py
backend/src/novestia/api/v1/: ai.py  journal.py  portfolio.py  risk.py  router.py  stocks.py  trades.py  users.py  watchlist.py  ws.py
backend/src/novestia/core/: auth.py  db.py  errors.py  idempotency.py  logging.py  pagination.py  redis.py
backend/src/novestia/integrations/: clerk.py  finnhub.py  gemini.py
backend/src/novestia/models/: __init__.py  ai.py  idempotency.py  portfolio.py  risk.py  stock.py  system.py  user.py  watchlist.py
backend/src/novestia/prompts/: __init__.py  metric_explanation_v1.txt  risk_interpretation_v1.txt  stock_overview_v1.txt
backend/src/novestia/schemas/: portfolio.py  risk.py  stock.py  trade.py  user.py  watchlist.py
backend/src/novestia/services/: ai_service.py  journal_service.py  market_hours.py  portfolio_service.py  risk_engine.py  risk_service.py  stock_service.py  trade_service.py  user_service.py  watchlist_service.py  ws_manager.py
backend/src/novestia/workers/: __main__.py  price_worker.py
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_health.py  test_models.py  test_portfolio.py  test_risk_engine.py  test_stocks.py  test_trades.py  test_ws.py
(+62 files in other folders)
